--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <!-- Town Dropdown -->
                     <div class="col-md-3">
                         <select id="town" class="form-select border-0 py-3" disabled>
-                            <option selected value="">Select a town</option>
+                            <option selected value="">اسم المحافظة</option>
                         </select>
                     </div>
 
